# los_bacheloros_tippspiel

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: scores.csv  timeline.csv
src/streamlit_app/: extrapoints.py  scoreboard.py  streamlit_run.py  styles.py  teams.py  timeline.py  utils.py
